--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,10 @@ spring.application.name=backendesiauapp
 #Tomcat configuration
 
 
-server.port=8080
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_testesiauapp2
 spring.datasource.username=root
-spring.datasource.password=mAgEPkcIMEeRVCKhvuGOAmHQbDAUgDQx
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.datasource.password=mypassword
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
  
